src/openim_sdk_ffi.h

extern char* CreateAdvancedQuoteMessage(char* operationID, char* text, char* message, char* messageEntityList);
extern char* CreateCardMessage(char* operationID, char* cardInfo);
extern char* CreateVideoMessageFromFullPath(char* operationID, char* videoFullPath, char* videoType, int64_t duration, char* snapshotFullPath);
extern char* CreateImageMessageFromFullPath(char* operationID, char* imageFullPath);
extern char* CreateSoundMessageFromFullPath(char* operationID, char* soundPath, int64_t duration);
extern char* CreateFileMessageFromFullPath(char* operationID, char* fileFullPath, char* fileName);
extern char* CreateImageMessage(char* operationID, char* imagePath);
extern char* CreateImageMessageByURL(char* operationID, char* sourcePicture, char* bigPicture, char* snapshotPicture);
extern char* CreateSoundMessageByURL(char* operationID, char* soundBaseInfo);
extern char* CreateSoundMessage(char* operationID, char* soundPath, int64_t duration);
extern char* CreateVideoMessageByURL(char* operationID, char* videoBaseInfo);
extern char* CreateVideoMessage(char* operationID, char* videoPath, char* videoType, int64_t duration, char* snapshotPath);
extern char* CreateFileMessageByURL(char* operationID, char* fileBaseInfo);
extern char* CreateFileMessage(char* operationID, char* filePath, char* fileName);
extern char* CreateMergerMessage(char* operationID, char* mergerElemList, char* title, char* summaryList);
extern char* CreateFaceMessage(char* operationID, int index, char* data);
extern char* CreateForwardMessage(char* operationID, char* message);