lib/openim_sdk_ffi_bindings_generated.dart


  late final _CreateAdvancedQuoteMessagePtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>)>>('CreateAdvancedQuoteMessage');
  late final _CreateAdvancedQuoteMessage =
      _CreateAdvancedQuoteMessagePtr.asFunction<
          ffi.Pointer<ffi.Char> Function(
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>)>();

  ffi.Pointer<ffi.Char> CreateCardMessage(
    ffi.Pointer<ffi.Char> operationID,
    ffi.Pointer<ffi.Char> cardInfo,
  ) {
    return _CreateCardMessage(
      operationID,
      cardInfo,
    );
  }

  late final _CreateCardMessagePtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>)>>('CreateCardMessage');
  late final _CreateCardMessage = _CreateCardMessagePtr.asFunction<
      ffi.Pointer<ffi.Char> Function(
          ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)>();

  ffi.Pointer<ffi.Char> CreateVideoMessageFromFullPath(
    ffi.Pointer<ffi.Char> operationID,
    ffi.Pointer<ffi.Char> videoFullPath,
    ffi.Pointer<ffi.Char> videoType,
    int duration,
    ffi.Pointer<ffi.Char> snapshotFullPath,
  ) {
    return _CreateVideoMessageFromFullPath(
      operationID,
      videoFullPath,
      videoType,
      duration,
      snapshotFullPath,
    );
  }

  late final _CreateVideoMessageFromFullPathPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              ffi.Int64,
              ffi.Pointer<ffi.Char>)>>('CreateVideoMessageFromFullPath');
  late final _CreateVideoMessageFromFullPath =
      _CreateVideoMessageFromFullPathPtr.asFunction<
          ffi.Pointer<ffi.Char> Function(
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              int,
              ffi.Pointer<ffi.Char>)>();

  ffi.Pointer<ffi.Char> CreateImageMessageFromFullPath(
    ffi.Pointer<ffi.Char> operationID,
    ffi.Pointer<ffi.Char> imageFullPath,
  ) {
    return _CreateImageMessageFromFullPath(
      operationID,
      imageFullPath,
    );
  }

  late final _CreateImageMessageFromFullPathPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>)>>('CreateImageMessageFromFullPath');
  late final _CreateImageMessageFromFullPath =
      _CreateImageMessageFromFullPathPtr.asFunction<
          ffi.Pointer<ffi.Char> Function(
              ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)>();

  ffi.Pointer<ffi.Char> CreateSoundMessageFromFullPath(
    ffi.Pointer<ffi.Char> operationID,
    ffi.Pointer<ffi.Char> soundPath,
    int duration,
  ) {
    return _CreateSoundMessageFromFullPath(
      operationID,
      soundPath,
      duration,
    );
  }

  late final _CreateSoundMessageFromFullPathPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              ffi.Int64)>>('CreateSoundMessageFromFullPath');
  late final _CreateSoundMessageFromFullPath =
      _CreateSoundMessageFromFullPathPtr.asFunction<
          ffi.Pointer<ffi.Char> Function(
              ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>, int)>();

  ffi.Pointer<ffi.Char> CreateFileMessageFromFullPath(
    ffi.Pointer<ffi.Char> operationID,
    ffi.Pointer<ffi.Char> fileFullPath,
    ffi.Pointer<ffi.Char> fileName,
  ) {
    return _CreateFileMessageFromFullPath(
      operationID,
      fileFullPath,
      fileName,
    );
  }

  late final _CreateFileMessageFromFullPathPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>)>>('CreateFileMessageFromFullPath');
  late final _CreateFileMessageFromFullPath =
      _CreateFileMessageFromFullPathPtr.asFunction<
          ffi.Pointer<ffi.Char> Function(ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)>();

  ffi.Pointer<ffi.Char> CreateImageMessage(
    ffi.Pointer<ffi.Char> operationID,
    ffi.Pointer<ffi.Char> imagePath,
  ) {
    return _CreateImageMessage(
      operationID,
      imagePath,
    );
  }

  late final _CreateImageMessagePtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>)>>('CreateImageMessage');
  late final _CreateImageMessage = _CreateImageMessagePtr.asFunction<
      ffi.Pointer<ffi.Char> Function(
          ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)>();

  ffi.Pointer<ffi.Char> CreateImageMessageByURL(
    ffi.Pointer<ffi.Char> operationID,
    ffi.Pointer<ffi.Char> sourcePicture,
    ffi.Pointer<ffi.Char> bigPicture,
    ffi.Pointer<ffi.Char> snapshotPicture,
  ) {
    return _CreateImageMessageByURL(
      operationID,
      sourcePicture,
      bigPicture,
      snapshotPicture,
    );
  }

  late final _CreateImageMessageByURLPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>)>>('CreateImageMessageByURL');
  late final _CreateImageMessageByURL = _CreateImageMessageByURLPtr.asFunction<
      ffi.Pointer<ffi.Char> Function(
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>)>();

  ffi.Pointer<ffi.Char> CreateSoundMessageByURL(
    ffi.Pointer<ffi.Char> operationID,
    ffi.Pointer<ffi.Char> soundBaseInfo,
  ) {
    return _CreateSoundMessageByURL(
      operationID,
      soundBaseInfo,
    );
  }

  late final _CreateSoundMessageByURLPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>)>>('CreateSoundMessageByURL');
  late final _CreateSoundMessageByURL = _CreateSoundMessageByURLPtr.asFunction<
      ffi.Pointer<ffi.Char> Function(
          ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)>();

  ffi.Pointer<ffi.Char> CreateSoundMessage(
    ffi.Pointer<ffi.Char> operationID,
    ffi.Pointer<ffi.Char> soundPath,
    int duration,
  ) {
    return _CreateSoundMessage(
      operationID,
      soundPath,
      duration,
    );
  }

  late final _CreateSoundMessagePtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>, ffi.Int64)>>('CreateSoundMessage');
  late final _CreateSoundMessage = _CreateSoundMessagePtr.asFunction<
      ffi.Pointer<ffi.Char> Function(
          ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>, int)>();

  ffi.Pointer<ffi.Char> CreateVideoMessageByURL(
    ffi.Pointer<ffi.Char> operationID,
    ffi.Pointer<ffi.Char> videoBaseInfo,
  ) {
    return _CreateVideoMessageByURL(
      operationID,
      videoBaseInfo,
    );
  }

  late final _CreateVideoMessageByURLPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>)>>('CreateVideoMessageByURL');
  late final _CreateVideoMessageByURL = _CreateVideoMessageByURLPtr.asFunction<
      ffi.Pointer<ffi.Char> Function(
          ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)>();

  ffi.Pointer<ffi.Char> CreateVideoMessage(
    ffi.Pointer<ffi.Char> operationID,
    ffi.Pointer<ffi.Char> videoPath,
    ffi.Pointer<ffi.Char> videoType,
    int duration,
    ffi.Pointer<ffi.Char> snapshotPath,
  ) {
    return _CreateVideoMessage(
      operationID,
      videoPath,
      videoType,
      duration,
      snapshotPath,
    );
  }

  late final _CreateVideoMessagePtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              ffi.Int64,
              ffi.Pointer<ffi.Char>)>>('CreateVideoMessage');
  late final _CreateVideoMessage = _CreateVideoMessagePtr.asFunction<
      ffi.Pointer<ffi.Char> Function(
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
          int,
          ffi.Pointer<ffi.Char>)>();

  ffi.Pointer<ffi.Char> CreateFileMessageByURL(
    ffi.Pointer<ffi.Char> operationID,
    ffi.Pointer<ffi.Char> fileBaseInfo,
  ) {
    return _CreateFileMessageByURL(
      operationID,
      fileBaseInfo,
    );
  }

  late final _CreateFileMessageByURLPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>)>>('CreateFileMessageByURL');
  late final _CreateFileMessageByURL = _CreateFileMessageByURLPtr.asFunction<
      ffi.Pointer<ffi.Char> Function(
          ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)>();

  ffi.Pointer<ffi.Char> CreateFileMessage(
    ffi.Pointer<ffi.Char> operationID,
    ffi.Pointer<ffi.Char> filePath,
    ffi.Pointer<ffi.Char> fileName,
  ) {
    return _CreateFileMessage(
      operationID,
      filePath,
      fileName,
    );
  }

  late final _CreateFileMessagePtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>)>>('CreateFileMessage');
  late final _CreateFileMessage = _CreateFileMessagePtr.asFunction<
      ffi.Pointer<ffi.Char> Function(ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)>();

  ffi.Pointer<ffi.Char> CreateMergerMessage(
    ffi.Pointer<ffi.Char> operationID,
    ffi.Pointer<ffi.Char> mergerElemList,
    ffi.Pointer<ffi.Char> title,
    ffi.Pointer<ffi.Char> summaryList,
  ) {
    return _CreateMergerMessage(
      operationID,
      mergerElemList,
      title,
      summaryList,
    );
  }

  late final _CreateMergerMessagePtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>)>>('CreateMergerMessage');
  late final _CreateMergerMessage = _CreateMergerMessagePtr.asFunction<
      ffi.Pointer<ffi.Char> Function(
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>)>();

  ffi.Pointer<ffi.Char> CreateFaceMessage(
    ffi.Pointer<ffi.Char> operationID,
    int index,
    ffi.Pointer<ffi.Char> data,
  ) {
    return _CreateFaceMessage(
      operationID,
      index,
      data,
    );
  }

  late final _CreateFaceMessagePtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(ffi.Pointer<ffi.Char>, ffi.Int,
              ffi.Pointer<ffi.Char>)>>('CreateFaceMessage');
  late final _CreateFaceMessage = _CreateFaceMessagePtr.asFunction<
      ffi.Pointer<ffi.Char> Function(
          ffi.Pointer<ffi.Char>, int, ffi.Pointer<ffi.Char>)>();

  ffi.Pointer<ffi.Char> CreateForwardMessage(
    ffi.Pointer<ffi.Char> operationID,
    ffi.Pointer<ffi.Char> message,
  ) {
    return _CreateForwardMessage(
      operationID,
      message,
    );
  }

  late final _CreateForwardMessagePtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>)>>('CreateForwardMessage');
  late final _CreateForwardMessage = _CreateForwardMessagePtr.asFunction<
      ffi.Pointer<ffi.Char> Function(
          ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)>();
